import renderer from 'react-test-renderer';
import SimpleImg from '../src/simpleImg';
import { shallow, mount } from 'enzyme';
import { APPEND_IMAGE_REF, IMAGES_LOADED, REMOVE_IMAGE_REF } from '../src/simpleImgProvider';
import React from 'react';

jest.mock('react-simple-animate', () => 'Animate');

const props = {
  src: 'src',
  placeHolderSrc: 'placeHolderSrc',
  imgClassName: 'img className',
  wrapperClassName: 'wrapper className',
  width: 100,
  height: 1000,
  alt: 'alt',
  sizes: 'sizes',
  srcSet: 'srcSet',
  backgroundColor: 'red',
  disappearInSecond: 1,
  disappearStyle: { opacity: 0 },
};
const appendImage = jest.fn();
const imageLoaded = jest.fn();
const removeImage = jest.fn();
const context = {
  [APPEND_IMAGE_REF]: appendImage,
  [IMAGES_LOADED]: imageLoaded,
  [REMOVE_IMAGE_REF]: removeImage,
};

describe('SimpleImg', () => {
  beforeEach(() => {
    jest.resetAllMocks();
  });

  it('should render correctly', () => {
    const tree = renderer.create(<SimpleImg {...props} />);
    expect(tree).toMatchSnapshot();
  });

  it('should render only span when place holder src is not supplied', () => {
    const { placeHolderSrc, ...omitProps } = props;
    const tree = renderer.create(<SimpleImg {...omitProps} />);
    expect(tree).toMatchSnapshot();
  });

  it('should append image ref when image mounted', () => {
    mount(<SimpleImg {...props} />, { context });
    expect(appendImage).toHaveBeenCalled();
  });

  describe('when first time image is loaded', () => {
    it('should set state as loaded and remove the image from the stack', () => {
      const tree = shallow(<SimpleImg {...props} />, { context: { ...context, [IMAGES_LOADED]: new Set(['test']) } });
      tree.instance().element = 'test';
      tree.setProps({});
      expect(tree.state('loaded')).toBeTruthy();
      expect(removeImage).toHaveBeenCalled();
      expect(removeImage.mock.calls[0][0]).toBe('test');
    });
  });
});
