// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SimpleImg should render correctly 1`] = `
<span
  className="wrapper className"
  style={
    Object {
      "display": "flex",
      "overflow": "hidden",
      "position": "relative",
    }
  }
>
  <img
    alt="alt"
    className="img className"
    data-src="src"
    data-srcset="srcSet"
    height={1000}
    sizes="sizes"
    src="placeHolderSrc"
    srcSet=""
    style={Object {}}
    width={100}
  />
  <Animate
    durationSeconds={1}
    endStyle={
      Object {
        "background": "red",
        "height": "100%",
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
    onCompleteStyle={
      Object {
        "display": "none",
      }
    }
    startAnimation={false}
    startStyle={
      Object {
        "background": "red",
        "height": "100%",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
  >
    <img
      alt="alt"
      className="img className"
      height={1000}
      src="placeHolderSrc"
      style={
        Object {
          "background": "red",
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "top": 0,
        }
      }
      width={100}
    />
  </Animate>
</span>
`;

exports[`SimpleImg should render only span when place holder src is not supplied 1`] = `
<span
  className="wrapper className"
  style={
    Object {
      "display": "flex",
      "overflow": "hidden",
      "position": "relative",
    }
  }
>
  <img
    alt="alt"
    className="img className"
    data-src="src"
    data-srcset="srcSet"
    height={1000}
    sizes="sizes"
    src={undefined}
    srcSet=""
    style={
      Object {
        "visibility": "hidden",
      }
    }
    width={100}
  />
  <Animate
    durationSeconds={1}
    endStyle={
      Object {
        "background": "red",
        "height": "100%",
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
    onCompleteStyle={
      Object {
        "display": "none",
      }
    }
    startAnimation={false}
    startStyle={
      Object {
        "background": "red",
        "height": "100%",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
  />
</span>
`;
